--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
     <main>
         <div class="menu">
             <h1>Infomaker</h1>
-            <a class="button" name="ajout" href="/ajout">Ajout d'un article</a>
-            <a class="button" name="stock" href="/stock">Etat des stocks</a>
+            <a class="button" name="ajout" href="/ajout">Ajout d'une question</a>
+            <a class="button" name="lquestion" href="/lquestion">Liste de questions</a>
         </div>
     </main>
     <footer>
