--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 
 body{
     background-color: white;
-    background-image:url("copains.jpg");
+    background-image:url("fond.png");
     background-size: cover;
     width: 100vw;
     margin:0;
