--- a/templates/lquestion.html
+++ b/templates/lquestion.html
@@ -18,6 +18,8 @@
             {% endfor %}
         </table>
         <a class="button" name="ajout" href="/ajout">Ajout d'une autre question</a>
+        <a class="button" name="modifier" href="/modifier">Modifier une question</a>
+        <a class="button" name="supprimer" href="/supprimer">Supprimer une question</a>
         <a class="button" name="menu" href="/">Retour au menu</a>
     </div> 
 </body>
