l'heure de manger

--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -12,6 +12,7 @@
         <form action = "/ajout" method = "POST">
             <h1>Ecrivez une question</h1>
             <p>Question : <br/><input type = "text" name = "question" /></p>
+            <p>Réponse : <br/><input type = "text" name = "reponse" /></p>
             <p><input class="button" type="submit" value="Confirmer" /></p>
         </form>
         <a class="button" name="menu" href="/">Retour au menu</a><br/>
