--- a/templates/index.html
+++ b/templates/index.html
@@ -10,20 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar background">
-        <ul class="nav-list">
-            <li>
-                <a href="/ajoutQuestion.html">Créer</a>
-                <a href="/templates/lquestion.html">Consulter</a>
-                <a href="/templates/QCM.html">Crée ton examen</a>
-                <a href="/templates/MesQCM.html">Consulte tes examen</a>
-            </li>
-        </ul>
-        <div class="rightNav">
-            <input type="text" name="Search" id="Search">
-            <button class="btn btn-sm">Chercher</button>
-        </div>
-    </nav>
+    {%include 'partials/_nav.html'%}
     <main>
         <div class="menu">
             <h1>Infomaker</h1>
