--- a/templates/lquestion.html
+++ b/templates/lquestion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
 </head>
 
 <body>
+    {%include 'partials/_nav.html'%}
     <div class="menu">
         <h1>Liste des questions</h1>
         <table>
@@ -31,5 +33,5 @@
         </table>
         <a class="button" name="ajout" href="/ajout">Ajout d'une autre question</a>
         <a class="button" name="menu" href="/">Retour au menu</a>
-    </div> 
+    </div>
 </body>
