--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar background">
+<nav class="navbar_background">
     <ul class="nav-list">
         <li>
             <a href="/ajout">Créer</a>
