--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/style.css" rel="stylesheet">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <title>Ajout</title>
 </head>
 
@@ -15,8 +16,17 @@
         <form action="/ajout" method="POST">
             <h1>Ecrivez une question</h1>
             <p>Question : <br/><input type="text" name="question" /></p>
-            <p>Réponse : <br/><input type="text" name="reponse" /></p>
-            <p><input class="button" type="submit" value="Confirmer" /></p>
+            <div class="nouveauBouton"></div>
+            <button type="button" onclick="demandePlusReponse()">Cliquez ici</button>
+            <script>
+                function demandePlusReponse() {
+                    fetch('/plusDeReponse')
+                    .then(response => response.text())
+                    .then(data => {
+                    $(".nouveauBouton").append(data);
+                    });
+                }
+            </script>            <p><input class="button" type="submit" value="Confirmer" /></p>
         </form>
         <a class="button" name="menu" href="/">Retour au menu</a><br/>
     </div>
