--- a/templates/lquestion.html
+++ b/templates/lquestion.html
@@ -16,13 +16,13 @@
         <table>
             <tr class="top">
                 <td>Question</td>
-                <td>Réponse</td>
+                <!-- <td>Réponse</td> -->
                 <td>Modifier/Supprimer</td>
             </tr>
             {% for questions in lquestion %}
             <tr>
                 <td>{{questions.question}}</td>
-                <td>{{questions.reponse}}</td>
+                <!-- <td>{{questions.reponse}}</td> -->
                 <td>
                     <a href="/modifier">Modifier</a>
                     <br>
