--- a/static/style.css
+++ b/static/style.css
@@ -33,7 +33,7 @@ h1{
     opacity:0.9;
     top:50%;
     left:50%;
-    transform:translate(-50%,-50%);
+    /* transform:translate(-50%,-50%); */
     text-align: center;
     background-color: whitesmoke;
 }
