--- a/templates/nouvelleReponse.html
+++ b/templates/nouvelleReponse.html
@@ -7,4 +7,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/style.css" rel="stylesheet">
 </head>
-<p>Réponse : <br><input type="text" name="reponse"></input><br></p>
+<p>Réponse : <br><input type="text" name="reponse" id=IdBouton></input></p>
+<input type="button" onclick="supprimerBouton()">Supprimer</input><br>
