--- a/templates/partials/nouvelleReponse.html
+++ b/templates/partials/nouvelleReponse.html
@@ -8,4 +8,4 @@
     <link href="/static/style.css" rel="stylesheet">
 </head>
 <p>Réponse : <br><input type="text" name="reponse" id=IdBouton></input></p>
-<input type="button" onclick="supprimerBouton()">Supprimer</input><br>
+<input type="button" onclick="supprimerBouton()" value="Supprimer"></input><br>
