--- a/static/style.css
+++ b/static/style.css
@@ -98,4 +98,7 @@ footer {
 
 .navbar_background {
     background-color: royalblue;
+    position: absolute;
+    width: 100%;
+    opacity: 0.8;
 }
