--- a/templates/partials/nouvelleReponse.html
+++ b/templates/partials/nouvelleReponse.html
@@ -1,11 +1,2 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
-</head>
-<p>Réponse : <br><input type="text" name="reponse" id=IdBouton></input></p>
-<input type="button" onclick="supprimerBouton()" value="Supprimer"></input><br>
+<p>Réponse : <br><input type="text" name="reponse" id="{{ IdBouton }}"></p>
+<input type="button" onclick="supprimerBouton({{ IdBouton }})" value="Supprimer"><br>
