--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,14 @@
     {%include 'partials/_nav.html'%}
     <main>
         <div class="menu">
-            <h1>Infomaker</h1>
-            <a class="button" name="ajout" href="/ajout">Ajout d'une question</a>
-            <a class="button" name="lquestion" href="/lquestion">Liste de questions</a>
+            <h1>Bienvenue<br/>sur<br/>Infomaker !</h1>
+            
+            <!-- <a class="button" name="ajout" href="/ajout">Ajout d'une question</a>
+            <a class="button" name="lquestion" href="/lquestion">Liste de questions</a> -->
         </div>
     </main>
     <footer>
         <p>&copy; 2023 | THEO REYNIER | ANTHONY HOMMAIS | CORENTIN FAY | SONIA KECHAOU</p>
     </footer>
 </body>
-
 </html>
