--- a/static/style.css
+++ b/static/style.css
@@ -90,7 +90,7 @@ footer {
     text-decoration: none;
     color: black;
     padding: 0.7em;
-    border-radius: 50%;
+    border-radius: 1em;
     background-color: whitesmoke;
 }
 
