--- a/templates/MesQCM.html
+++ b/templates/MesQCM.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Liste QCM</title>
 </head>
 
 <body>
