--- a/templates/QCM.html
+++ b/templates/QCM.html
@@ -10,8 +10,20 @@
 </head>
 
 <body>
-    {%include 'partials/_nav.html'%}
-    <h1>Créer ton examen</h1>
+    <form>
+        {%include 'partials/_nav.html'%}
+        <h1>Créer ton examen</h1>
+        {%for element in ListesQuestions%}
+        <input type="checkbox" name="lq" id={{element}}>{{element}}{%endfor%}
+        <button type="submit" onclick="test()">Envoyer</button>
+    </form>
+    <script>
+        function test() {
+            test = document.getElementsByClassName("lq");
+            console.log(test);
+
+        }
+    </script>
 </body>
 
 </html>
