--- a/templates/partials/nouvelleReponse.html
+++ b/templates/partials/nouvelleReponse.html
@@ -1,2 +1,2 @@
-<p>Réponse : <br><input type="text" name="reponse" id="{{ IdBouton }}"></p>
-<input type="button" onclick="supprimerBouton({{ IdBouton }})" value="Supprimer"><br>
+<p><input type="text" name="reponse" id="{{ IdBouton }}" placeholder="Réponse"></p>
+<input type="button" onclick="supprimerBouton({{ IdBouton }})" value="Supprimer" id="{{ IdBouton }}">
