--- a/templates/partials/nouvelleReponse.html
+++ b/templates/partials/nouvelleReponse.html
@@ -1,2 +1,2 @@
-<p><input type="text" name="reponse" id="{{ IdBouton }}" placeholder="Réponse"></p>
-<input type="button" onclick="supprimerBouton({{ IdBouton }})" value="Supprimer" id="{{ IdBouton }}">
+<p><input type="checkbox" id="{{IdCheck}}"/><input type="text" name="reponse" id="{{ IdBouton }}" placeholder="Réponse"></p>
+<input type="button" onclick="supprimerBouton({{ IdBouton }})" onclick="supprimerBouton({{ IdCheck }})" value="Supprimer" id="{{ IdBouton }}">
