--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -62,11 +62,11 @@
 
                     }
                 </script>           
-                <p><input class="button" type="submit" value="Ajouter" /></p>
+                <p><input class="button" type="submit" value="Ajouter la question" /></p>
                 <!-- <p><input type="button" class="button" value="Visualiser" onClick="visualiser()"/></p> -->
                 
             </form>
-            <a class="button" name="menu" href="/">Retour au menu</a><br/>
+            <!-- <a class="button" name="menu" href="/">Retour au menu</a><br/> -->
         </div>
         <div class="visu">
             Cliquez sur visualiser pour voir la visualisation de votre visuel
