--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -1,6 +1,7 @@
 <nav class="navbar_background">
     <ul class="nav-list">
         <li>
+            <a href="/">Menu</a>
             <a href="/ajout">Créer</a>
             <a href="/lquestion">Consulter</a>
             <a href="/QCM">Crée ton examen</a>
