--- a/templates/lquestion.html
+++ b/templates/lquestion.html
@@ -42,7 +42,7 @@
             </tr>
             {% endfor %}
         </table>
-        <a class="button" name="ajout" href="/ajout">Ajout d'une autre question</a>
-        <a class="button" name="menu" href="/">Retour au menu</a>
+        <!-- <a class="button" name="ajout" href="/ajout">Ajout d'une autre question</a>
+        <a class="button" name="menu" href="/">Retour au menu</a> -->
     </div>
 </body>
