--- a/templates/partials/nouvelleReponse.html
+++ b/templates/partials/nouvelleReponse.html
@@ -1,4 +1,4 @@
-<p><input type="checkbox" id="{{IdCheck}}"/>
+<p><input type="checkbox" id="{{IdCheck}}" class="newReponse"/>
 <label for="{{IdCheck}}" aria-describedby="label">
 <span class="Checked"></span></label>
 <input type="text" name="reponse" id="{{ IdBouton }}" placeholder="Réponse"></p>
