--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/x-icon" href="/static/icone.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,6 +36,7 @@
             <form action="/ajout" method="POST">
                 <h1>Ecrivez une question</h1>
                 <p>Question : <br/><textarea id="question" name="question" rows="4" cols="40" onkeyup="visualiserQ()"></textarea></p>
+                <p>------------------------------------------------------</p>
                     <!-- <input type="text" name="question" id="question" onkeyup="visualiser()"/> -->
                 <div class="nouveauBouton"></div>
                 <button type="button" onclick="demandePlusReponse()">Ajouter une réponse</button>
