Début Affichage.html

--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -6,12 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/style.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
     <title>Document</title>
 </head>
 
 <body>
-    <p>OH SHIT</p>
+    <div class="affQCM">
+
+    </div>
+    <script>
+        function afficherQCM() {
+            fetch('/generate')
+                .then(response => response.text())
+                .then(data => {
+                $(".affQCM").append(data);
+            });
+        }
+    </script>
 </body>
 
 </html>
