--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -32,44 +32,39 @@
     {%include 'partials/_nav.html'%}
     <div class="mid double">
         <div class="code">
-            <!-- <form action="/visual" method="POST"> -->
             <form action="/ajout" method="POST">
                 <h1>Ecrivez une question</h1>
                 <p>Question : <br/><textarea id="question" name="question" rows="4" cols="40" onkeyup="visualiserQ()"></textarea></p>
                 <p>------------------------------------------------------</p>
-                    <!-- <input type="text" name="question" id="question" onkeyup="visualiser()"/> -->
-                <div class="nouveauBouton"></div>
-                <button type="button" onclick="demandePlusReponse()">Ajouter une réponse</button>
-                <script>
-                    function demandePlusReponse() {
-                        fetch('/plusDeReponse')
-                            .then(response => response.text())
-                            .then(data => {
-                            $(".nouveauBouton").append(data);
-                        });
-                    }
-                    function supprimerBouton(id) {
-                        for (let i = 0; i < 3; i++){
-                            fetch('/supprimer_bouton', {
-                                method: 'DELETE',
-                                body: JSON.stringify({'id': id}),
-                                headers: { 'Content-Type': 'application/json' }
+                <div class="nouveauBouton">
+                    <button type="button" onclick="demandePlusReponse()">Ajouter une réponse</button>
+                    <script>
+                        function demandePlusReponse() {
+                            fetch('/plusDeReponse')
+                                .then(response => response.text())
+                                .then(data => {
+                                $(".nouveauBouton").append(data);
                             });
-                            $("#"+id).remove();
                         }
-                    }
-                    function visualiserQ(){
-                        let textQuestion = converter.makeHtml($("#question").val());
-                        $(".visu").html(textQuestion);
-                        MathJax.typeset()
-                    }
-                </script> 
+                        function supprimerBouton(id) {
+                            for (let i = 0; i < 3; i++){
+                                fetch('/supprimer_bouton', {
+                                    method: 'DELETE',
+                                    body: JSON.stringify({'id': id}),
+                                    headers: { 'Content-Type': 'application/json' }
+                                });
+                                $("#"+id).remove();
+                            }
+                        }
+                        function visualiserQ(){
+                            let textQuestion = converter.makeHtml($("#question").val());
+                            $(".visu").html(textQuestion);
+                            MathJax.typeset()
+                        }
+                    </script> 
                 </div>          
                 <p><input class="button" type="submit" value="Ajouter la question" /></p>
-                <!-- <p><input type="button" class="button" value="Visualiser" onClick="visualiser()"/></p> -->
-                
             </form>
-            <!-- <a class="button" name="menu" href="/">Retour au menu</a><br/> -->
         </div>
         <div class="visu">
             Cliquez sur visualiser pour voir la visualisation de votre visuel
