--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- {%include 'partials/_nav.html'%} -->
+    {%include 'partials/_nav.html'%}
     <main>
         <div class="menu">
             <h1>Bienvenue<br/>sur<br/>Infomaker !</h1>
@@ -19,11 +19,11 @@
             <!-- <a class="button" name="connexion" href="/connexion">Connexion</a> -->
             <!-- <a class="button" name="ajout" href="/ajout">Ajout d'une question</a>
             <a class="button" name="lquestion" href="/lquestion">Liste de questions</a> -->
-            <form action="/accueil" method="POST">
+            <!-- <form action="/accueil" method="POST">
                 <p> Nom d'utilisateur : </p><input type="text" name="nomU" id="nomU"/>
                 <p> Mot de passe : </p><input type="password" name="passU" id="passU"/>
                 <p><input class="button" type="submit" value="Connexion" /></p>
-            </form>
+            </form> -->
         </div>
     </main>
     <footer>
