--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -23,8 +23,9 @@
                     $(".affQCM").append(data);
                 });
         }
+        afficherQCM()
     </script>
-    {%%}
+
 </body>
 
 </html>
