Encore Affichage.html

--- a/templates/QCM.html
+++ b/templates/QCM.html
@@ -19,7 +19,7 @@
         </script> -->
         {%for element in ListesQuestions%}
 
-        <input type="checkbox" name={{element}}>{{element[0]}}
+        <input type="checkbox" name={{element}}>{{element}}
 
         <script>
             // document.getElementById("jdr").id = i;
