--- a/templates/lquestion.html
+++ b/templates/lquestion.html
@@ -31,26 +31,28 @@
     {%include 'partials/_nav.html'%}
     <div class="menu">
         <h1>Liste des questions</h1>
-        <table>
-            <tr class="top">
-                <td>Question</td>
-                <!-- <td>Réponse</td> -->
-                <td>Modifier/Supprimer</td>
-            </tr>
-            {% for questions in lquestion %}
-            <tr>
-                <td id="{{questions.idQ}}">{{questions.enonce}}</td>
-                <script>
-                    $('#{{questions.idQ}}').html(converter.makeHtml($('#{{questions.idQ}}').text()));
-                </script>
-                <td>
-                    <a href="{{ url_for('modifier', id=questions.idQ)}}">Modifier</a>
-                    <br>
-                    <a href="{{ url_for('supprimer', id=questions.idQ)}}">Supprimer</a>
-                </td>
-            </tr>
-            {% endfor %}
-        </table>
+        <div class="listeQ">
+            <table>
+                <tr class="top">
+                    <td>Question</td>
+                    <!-- <td>Réponse</td> -->
+                    <td>Modifier/Supprimer</td>
+                </tr>
+                {% for questions in lquestion %}
+                <tr>
+                    <td id="{{questions.idQ}}">{{questions.enonce}}</td>
+                    <script>
+                        $('#{{questions.idQ}}').html(converter.makeHtml($('#{{questions.idQ}}').text()));
+                    </script>
+                    <td>
+                        <a href="{{ url_for('modifier', id=questions.idQ)}}">Modifier</a>
+                        <br>
+                        <a href="{{ url_for('supprimer', id=questions.idQ)}}">Supprimer</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
         <!-- <a class="button" name="ajout" href="/ajout">Ajout d'une autre question</a>
         <a class="button" name="menu" href="/">Retour au menu</a> -->
     </div>
